# real-time-ml-fuel-estimator

./: .gitignore  README.md  quix.yaml
.github/: deploy_to_dev.yml  test.yml
.github/workflows/: deploy_to_dev.yml  deploy_to_prod.yml  test.yml
docker-compose/: Makefile  elasticsearch_and_kibana.yml  historical-feature-pipeline.yml  live-feature-pipeline.yml  redpanda.yml
services/flights_producer/: Dockerfile  app.yaml  pyproject.toml  setup_historical_config.env  setup_historical_config.sh  setup_live_config.env  setup_live_config.sh
services/flights_producer/src/: config.py  main.py  paths.py
services/flights_producer/src/aviation_edge_api/: flight.py  historical_flights.py  live_flights.py
services/flights_to_feature_store/: Dockerfile  Makefile  app.yaml  pyproject.toml  setup_historical_config.sh  setup_live_config.sh
services/flights_to_feature_store/src/: config.py  hopsworks_fs  main.py
services/flights_with_apm/: Dockerfile  Makefile  app.yaml  pyproject.toml  setup_historical_config.sh  setup_live_config.sh
services/flights_with_apm/src/: config.py  flight.py  main.py  openap_model.py
services/fuel_predictor/: Dockerfile  Makefile  app.yaml  best_fuel_estimator.pkl  pyproject.toml  setup_historical_config.env  setup_historical_config.sh  setup_live_config.env  setup_live_config.sh
services/fuel_predictor/notebooks/: EDA.ipynb
services/fuel_predictor/src/: baseline_model.py  config.py  data_preprocessing.py  features_engineering.py  hopsworks_fs.py  model_factory.py  prediction.py  restapi.py  training.py  utils.py
services/fuel_predictor/tests/: test_apply_features_engineering.py  test_apply_preprocessing.py
